fdo#52640 fix right-aligned tabstops

It is no good to change temporary object...

Change-Id: Ib1178e154341dd0216fd965d3ed6c264de40d634
Signed-off-by: Kohei Yoshida <kohei.yoshida@gmail.com>